Updated icons, fixed footer.

--- a/home.html
+++ b/home.html
@@ -103,7 +103,7 @@
 
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
-                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
                     <h4>John Doe</h4>
                     <br>
                     <hr class="w3-clear">
@@ -125,7 +125,7 @@
                     <table style="width:100%">
                         <tr>
                             <td>
-                                <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right w3-margin-bottom" style="width:60px">
+                                <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
                             </td>
                             <td style="width: 100%">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
@@ -146,7 +146,7 @@
 
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
-                    <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
                     <h4>Jane Doe</h4>
                     <br>
                     <hr class="w3-clear">
@@ -174,7 +174,7 @@
 
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
-                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
                     <h4>Angie Jane</h4>
                     <br>
                     <hr class="w3-clear">
@@ -189,7 +189,7 @@
                     <table style="width:100%">
                         <tr>
                             <td>
-                                <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right w3-margin-bottom" style="width:60px">
+                                <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
                             </td>
                             <td style="width: 100%">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
