--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="w3-container">
             <h4 class="w3-center">My Profile</h4>
             <p class="w3-center">
-              <img src="images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+              <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
             </p>
             <hr>
             <p>
@@ -141,7 +141,7 @@
 
         <div class="w3-container w3-card w3-white w3-margin">
           <br>
-          <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+          <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
           <span class="w3-right w3-opacity">1 min</span>
           <h4>John Doe</h4>
           <br>
@@ -166,7 +166,7 @@
 
         <div class="w3-container w3-card w3-white w3-margin">
           <br>
-          <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+          <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
           <span class="w3-right w3-opacity">16 min</span>
           <h4>Jane Doe</h4>
           <br>
@@ -183,7 +183,7 @@
 
         <div class="w3-container w3-card w3-white w3-margin">
           <br>
-          <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+          <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
           <span class="w3-right w3-opacity">32 min</span>
           <h4>Angie Jane</h4>
           <br>
