--- a/messages.html
+++ b/messages.html
@@ -87,16 +87,16 @@
             <div class="w3-col m2">
                 <div class="w3-container w3-card w3-white w3-margin" style="max-height: 720px; overflow-y: scroll">
                     <br>
-                    <img src="images/avatar2.png" alt="Avatar" style="width:100%" class="w3-circle">
+                    <img src="images/avatar2.png" alt="Avatar" style="width:100%" class="w3-round-large">
                     <h6>Profile #1</h6>
                     <hr>
-                    <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle">
+                    <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large">
                     <h6>Profile #2</h6>
                     <hr>
-                    <img src="images/avatar5.png" alt="Avatar" style="width:100%" class="w3-circle">
+                    <img src="images/avatar5.png" alt="Avatar" style="width:100%" class="w3-round-large">
                     <h6>Profile #3</h6>
                     <hr>
-                    <img src="images/avatar6.png" alt="Avatar" style="width:100%" class="w3-circle">
+                    <img src="images/avatar6.png" alt="Avatar" style="width:100%" class="w3-round-large">
                     <h6>Profile #4</h6>
                 </div>
                 <!-- End Middle Column -->
@@ -110,7 +110,7 @@
                             <li>
                                 <table style="width: 100%">
                                     <td style="vertical-align: top">
-                                        <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle">
+                                        <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large">
                                     </td>
                                     <td style="width: 90%">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -136,7 +136,7 @@
                             <li>
                                 <table style="width: 100%">
                                     <td style="vertical-align: top">
-                                        <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle">
+                                        <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large">
                                     </td>
                                     <td style="width: 90%">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
