--- a/network.html
+++ b/network.html
@@ -110,7 +110,7 @@
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
-                                    <img src="images/avatar2.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                    <img src="images/avatar2.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
                                 </p>
                                 <h4 class="w3-center">Profile #1</h4>
                                 <hr>
@@ -125,7 +125,7 @@
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
-                                    <img src="images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                    <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
                                 </p>
                                 <h4 class="w3-center">Profile #2</h4>
                                 <hr>
@@ -140,7 +140,7 @@
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
-                                    <img src="images/avatar5.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                    <img src="images/avatar5.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
                                 </p>
                                 <h4 class="w3-center">Profile #3</h4>
                                 <hr>
@@ -157,7 +157,7 @@
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
-                                    <img src="images/avatar6.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                    <img src="images/avatar6.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
                                 </p>
                                 <h4 class="w3-center">Profile #4</h4>
                                 <hr>
