--- a/network_search.html
+++ b/network_search.html
@@ -109,7 +109,7 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar2.png" class="w3-circle" style="height:116px;width:116px" alt="Avatar">
+                                <img src="images/avatar2.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
                             </p>
                         </td>
                         <td class="w3-padding">
@@ -138,7 +138,7 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar3.png" class="w3-circle" style="height:116px;width:116px" alt="Avatar">
+                                <img src="images/avatar3.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
                             </p>
                         </td>
                         <td class="w3-padding">
@@ -167,7 +167,7 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar5.png" class="w3-circle" style="height:116px;width:116px" alt="Avatar">
+                                <img src="images/avatar5.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
                             </p>
                         </td>
                         <td class="w3-padding">
@@ -196,7 +196,7 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar6.png" class="w3-circle" style="height:116px;width:116px" alt="Avatar">
+                                <img src="images/avatar6.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
                             </p>
                         </td>
                         <td class="w3-padding">
