--- a/profile_edit.html
+++ b/profile_edit.html
@@ -88,7 +88,7 @@
 
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
-                    <img id="profile_img" src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle w3-margin-bottom">
+                    <img id="profile_img" src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large w3-margin-bottom">
                     <table>
                         <td>
                             <p class="w3-opacity-min">Select and upload a new profile image.</p>
