--- a/register.html
+++ b/register.html
@@ -84,7 +84,7 @@
                             <tr>
                                 <td>
                                     <div class="w3-row w3-padding" style="width:100%;">
-                                        <img id="profile_img" src='images/placeholder.png' alt='Image not found. Please try again.' width="160" height="160" class='w3-border w3-circle'>
+                                        <img id="profile_img" src='images/placeholder.png' alt='Image not found. Please try again.' width="160" height="160" class='w3-border w3-round-large'>
                                     </div>
                                 </td>
                                 <td>
@@ -128,7 +128,7 @@
     </div>
     <br>
     <!-- Footer -->
-    <footer class="w3-container w3-theme-d5">
+    <footer class="w3-container w3-theme-d5 w3-bottom">
         <table class="w3-opacity-min" style="width:100%">
             <td>
                 <h5>LinkedIn Clone</h5>
