--- a/notifications.html
+++ b/notifications.html
@@ -95,7 +95,7 @@
                                 <tr>
                                     <td>
                                         <p class="w3-center">
-                                            <img src="images/avatar2.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                            <img src="images/avatar2.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
                                         </p>
                                     </td>
                                     <td style="width: 100%">
@@ -127,7 +127,7 @@
                                 <tr>
                                     <td>
                                         <p class="w3-center">
-                                            <img src="images/avatar3.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                            <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
                                         </p>
                                     </td>
                                     <td style="width: 100%">
@@ -161,7 +161,7 @@
                                 <tr>
                                     <td>
                                         <p class="w3-center">
-                                            <img src="images/avatar5.png" class="w3-circle" style="height:106px;width:106px" alt="Avatar">
+                                            <img src="images/avatar5.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
                                         </p>
                                     </td>
                                     <td style="width: 100%">
@@ -188,13 +188,13 @@
 
             <div class="w3-container w3-card w3-white w3-margin">
                 <br>
-                <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
                 <h4>Jane Doe has liked the following article:</h4>
                 <br>
                 <hr class="w3-clear">
                 <div class="w3-container w3-white">
                     <br>
-                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
                     <h4>Angie Jane</h4>
                     <br>
                     <hr class="w3-clear">
