--- a/settings.html
+++ b/settings.html
@@ -150,7 +150,7 @@
     </div>
     <br>
     <!-- Footer -->
-    <footer class="w3-container w3-theme-d5">
+    <footer class="w3-container w3-theme-d5 w3-bottom">
         <table class="w3-opacity-min" style="width:100%">
             <td>
                 <h5>LinkedIn Clone</h5>
