--- a/user_profile.html
+++ b/user_profile.html
@@ -88,7 +88,7 @@
 
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
-                    <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-circle w3-margin-bottom">
+                    <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large w3-margin-bottom">
                     <table style="width:100%">
                         <td>
                             <h4>Jane Doe</h4>
