Clickable names, fixes on comments.

--- a/admin.html
+++ b/admin.html
@@ -81,7 +81,7 @@
                             </p>
                         </td>
                         <td class="w3-padding">
-                            <h4 class="w3-center">Profile #1</h4>
+                            <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #1</a></h4>
                         </td>
                         <td>
                             <p>
@@ -130,7 +130,7 @@
                             </p>
                         </td>
                         <td class="w3-padding">
-                            <h4 class="w3-center">Profile #2</h4>
+                            <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #2</a></h4>
                         </td>
                         <td>
                             <p>
@@ -179,7 +179,7 @@
                             </p>
                         </td>
                         <td class="w3-padding">
-                            <h4 class="w3-center">Profile #3</h4>
+                            <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #3</a></h4>
                         </td>
                         <td>
                             <p>
@@ -228,7 +228,7 @@
                             </p>
                         </td>
                         <td class="w3-padding">
-                            <h4 class="w3-center">Profile #4</h4>
+                            <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #4</a></h4>
                         </td>
                         <td>
                             <p>
