--- a/home.html
+++ b/home.html
@@ -103,29 +103,26 @@
 
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
-                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
-                    <h4>John Doe</h4>
+                    <a href="user_profile.html">
+                        <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
+                    </a>
+                    <h4><a href="user_profile.html" class="w3-link">John Doe</a></h4>
                     <br>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                         aliquip ex ea commodo consequat.
                     </p>
-                    <div class="w3-row-padding" style="margin:0 -16px">
-                        <div class="w3-half">
-                            <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
-                        </div>
-                        <div class="w3-half">
-                            <img src="images/nature.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
-                        </div>
-                    </div>
+                    <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
                     <button type="button" class="w3-button w3-theme-d2">
                         <i class="fa fa-thumbs-up"></i> Like</button>
                     <hr class="w3-clear">
                     <table style="width:100%">
                         <tr>
                             <td>
-                                <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
+                                <a href="user_profile.html">
+                                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
+                                </a>
                             </td>
                             <td style="width: 100%">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
@@ -146,15 +143,17 @@
 
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
-                    <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
-                    <h4>Jane Doe</h4>
+                    <a href="user_profile.html">
+                        <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
+                    </a>
+                    <h4><a href="user_profile.html" class="w3-link">Jane Doe</a></h4>
                     <br>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                         aliquip ex ea commodo consequat.
                     </p>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
+                    <button type="button" class="w3-button w3-theme-d2">
                         <i class="fa fa-thumbs-up"></i> Like</button>
                     <hr class="w3-clear">
                     <table style="width:100%">
@@ -174,8 +173,10 @@
 
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
-                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
-                    <h4>Angie Jane</h4>
+                    <a href="user_profile.html">
+                        <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
+                    </a>
+                    <h4><a href="user_profile.html" class="w3-link">Angie Jane</a></h4>
                     <br>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -183,13 +184,15 @@
                         aliquip ex ea commodo consequat.
                     </p>
                     <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
+                    <button type="button" class="w3-button w3-theme-d2">
                         <i class="fa fa-thumbs-up"></i> Like</button>
                     <hr class="w3-clear">
                     <table style="width:100%">
                         <tr>
                             <td>
-                                <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
+                                <a href="user_profile.html">
+                                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
+                                </a>
                             </td>
                             <td style="width: 100%">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
