--- a/jobs.html
+++ b/jobs.html
@@ -104,20 +104,13 @@
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <h4>Title</h4>
-                    <p>Submitted by Profile #1 </p>
+                    <p>Submitted by <a href="user_profile.html" class="w3-link">Profile #1</a> </p>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                         aliquip ex ea commodo consequat.
                     </p>
-                    <div class="w3-row-padding" style="margin:0 -16px">
-                        <div class="w3-half">
-                            <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
-                        </div>
-                        <div class="w3-half">
-                            <img src="images/nature.jpg" style="width:100%" alt="Nature" class="w3-margin-bottom">
-                        </div>
-                    </div>
+                    <img src="images/lights.jpg" style="width:100%" alt="Northern Lights" class="w3-margin-bottom">
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
                         <i class="fa fa-send"></i> Apply</button>
                 </div>
@@ -125,7 +118,7 @@
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <h4>Title</h4>
-                    <p>Submitted by Profile #2 </p>
+                    <p>Submitted by <a href="user_profile.html" class="w3-link">Profile #2</a> </p>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -138,7 +131,7 @@
                 <div class="w3-container w3-card w3-white w3-margin">
                     <br>
                     <h4>Title</h4>
-                    <p>Submitted by Profile #3 </p>
+                    <p>Submitted by <a href="user_profile.html" class="w3-link">Profile #3</a> </p>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
