--- a/messages.html
+++ b/messages.html
@@ -110,7 +110,9 @@
                             <li>
                                 <table style="width: 100%">
                                     <td style="vertical-align: top">
-                                        <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large">
+                                        <a href="user_profile.html">
+                                            <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large">
+                                        </a>
                                     </td>
                                     <td style="width: 90%">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -136,7 +138,9 @@
                             <li>
                                 <table style="width: 100%">
                                     <td style="vertical-align: top">
-                                        <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large">
+                                        <a href="user_profile.html">
+                                            <img src="images/avatar3.png" alt="Avatar" style="width:100%" class="w3-round-large">
+                                        </a>
                                     </td>
                                     <td style="width: 90%">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
