--- a/network_search.html
+++ b/network_search.html
@@ -109,11 +109,13 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar2.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
+                                <a href="user_profile.html">
+                                    <img src="images/avatar2.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
+                                </a>
                             </p>
                         </td>
                         <td class="w3-padding">
-                            <h4 class="w3-center">Profile #1</h4>
+                            <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #1</a></h4>
                         </td>
                         <td>
                             <p>
@@ -138,11 +140,13 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar3.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
+                                <a href="user_profile.html">
+                                    <img src="images/avatar3.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
+                                </a>
                             </p>
                         </td>
                         <td class="w3-padding">
-                            <h4 class="w3-center">Profile #2</h4>
+                            <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #2</a></h4>
                         </td>
                         <td>
                             <p>
@@ -167,11 +171,13 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar5.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
+                                <a href="user_profile.html">
+                                    <img src="images/avatar5.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
+                                </a>
                             </p>
                         </td>
                         <td class="w3-padding">
-                            <h4 class="w3-center">Profile #3</h4>
+                            <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #3</a></h4>
                         </td>
                         <td>
                             <p>
@@ -196,11 +202,13 @@
                     <table style="width: 100%">
                         <td>
                             <p class="w3-center">
-                                <img src="images/avatar6.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
+                                <a href="user_profile.html">
+                                    <img src="images/avatar6.png" class="w3-round-large" style="height:116px;width:116px" alt="Avatar">
+                                </a>
                             </p>
                         </td>
                         <td class="w3-padding">
-                            <h4 class="w3-center">Profile #4</h4>
+                            <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #4</a></h4>
                         </td>
                         <td>
                             <p>
