--- a/notifications.html
+++ b/notifications.html
@@ -90,12 +90,15 @@
                         <div class="w3-container w3-card w3-white w3-margin">
                             <table style="width: 100%">
                                 <tr>
-                                    <h4 class="w3-center">Profile #1 wants to connect</h4>
+                                    <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #1</a> wants
+                                        to connect</h4>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p class="w3-center">
-                                            <img src="images/avatar2.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                            <a href="user_profile.html">
+                                                <img src="images/avatar2.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                            </a>
                                         </p>
                                     </td>
                                     <td style="width: 100%">
@@ -122,12 +125,15 @@
                         <div class="w3-container w3-card w3-white w3-margin">
                             <table style="width: 100%">
                                 <tr>
-                                    <h4 class="w3-center">Profile #2 wants to connect</h4>
+                                    <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #2</a> wants
+                                        to connect</h4>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p class="w3-center">
-                                            <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                            <a href="user_profile.html">
+                                                <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                            </a>
                                         </p>
                                     </td>
                                     <td style="width: 100%">
@@ -156,12 +162,15 @@
                         <div class="w3-container w3-card w3-white w3-margin">
                             <table style="width: 100%">
                                 <tr>
-                                    <h4 class="w3-center">Profile #3 wants to connect</h4>
+                                    <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #3</a> wants
+                                        to connect</h4>
                                 </tr>
                                 <tr>
                                     <td>
                                         <p class="w3-center">
-                                            <img src="images/avatar5.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                            <a href="user_profile.html">
+                                                <img src="images/avatar5.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                            </a>
                                         </p>
                                     </td>
                                     <td style="width: 100%">
@@ -188,14 +197,18 @@
 
             <div class="w3-container w3-card w3-white w3-margin">
                 <br>
-                <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
-                <h4>Jane Doe has liked the following article:</h4>
+                <a href="user_profile.html">
+                    <img src="images/avatar5.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
+                </a>
+                <h4><a href="user_profile.html" class="w3-link">Jane Doe</a> has liked the following article:</h4>
                 <br>
                 <hr class="w3-clear">
                 <div class="w3-container w3-white">
                     <br>
-                    <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
-                    <h4>Angie Jane</h4>
+                    <a href="user_profile.html">
+                        <img src="images/avatar6.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right" style="width:60px">
+                    </a>
+                    <h4><a href="user_profile.html" class="w3-link">Angie Jane</a></h4>
                     <br>
                     <hr class="w3-clear">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
@@ -203,10 +216,32 @@
                         aliquip ex ea commodo consequat.
                     </p>
                     <img src="images/nature.jpg" style="width:100%" class="w3-margin-bottom">
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
+                    <button type="button" class="w3-button w3-theme-d2">
                         <i class="fa fa-thumbs-up"></i> Like</button>
-                    <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
-                        <i class="fa fa-comment"></i> Comment</button>
+                    <hr class="w3-clear">
+                    <table style="width:100%">
+                        <tr>
+                            <td>
+                                <a href="user_profile.html">
+                                    <img src="images/avatar2.png" alt="Avatar" class="w3-left w3-round-large w3-margin-right w3-margin-bottom" style="width:60px">
+                                </a>
+                            </td>
+                            <td style="width: 100%">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+                                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                                    ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            </td>
+                        </tr>
+                    </table>
+                    <table style="width:100%">
+                        <td style="width: 100%">
+                            <input type="text" placeholder="Leave a comment" class="w3-border w3-padding w3-margin-bottom" style="width:100%;" />
+                        </td>
+                        <td style="width: 100%">
+                            <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom">
+                                <i class="fa fa-comment"></i> Comment</button>
+                        </td>
+                    </table>
                 </div>
             </div>
 
