--- a/network.html
+++ b/network.html
@@ -110,9 +110,11 @@
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
-                                    <img src="images/avatar2.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                    <a href="user_profile.html">
+                                        <img src="images/avatar2.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                    </a>
                                 </p>
-                                <h4 class="w3-center">Profile #1</h4>
+                                <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #1</a></h4>
                                 <hr>
                                 <p>
                                     <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
@@ -125,9 +127,11 @@
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
-                                    <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                    <a href="user_profile.html">
+                                        <img src="images/avatar3.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                    </a>
                                 </p>
-                                <h4 class="w3-center">Profile #2</h4>
+                                <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #2</a></h4>
                                 <hr>
                                 <p>
                                     <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
@@ -140,9 +144,11 @@
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
-                                    <img src="images/avatar5.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                    <a href="user_profile.html">
+                                        <img src="images/avatar5.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                    </a>
                                 </p>
-                                <h4 class="w3-center">Profile #3</h4>
+                                <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #3</a></h4>
                                 <hr>
                                 <p>
                                     <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
@@ -157,9 +163,11 @@
                         <td style="width: 33.3%;">
                             <div class="w3-container w3-card w3-white w3-margin">
                                 <p class="w3-center">
-                                    <img src="images/avatar6.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                    <a href="user_profile.html">
+                                        <img src="images/avatar6.png" class="w3-round-large" style="height:106px;width:106px" alt="Avatar">
+                                    </a>
                                 </p>
-                                <h4 class="w3-center">Profile #4</h4>
+                                <h4 class="w3-center"><a href="user_profile.html" class="w3-link">Profile #4</a></h4>
                                 <hr>
                                 <p>
                                     <i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
